// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/RadioButton Checked 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gyMicV fRpuqn sc-gkmwsU kLffam"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 eBGZZL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dxpjCF StyledRadioButton-g1f6ld-5 faNYKv"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 ivWYmc"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 euJrhi StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bDuVfd"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-g1f6ld-3 bSqPxG"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gyMicV ksuWwf sc-gkmwsU kLffam"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 eBGZZL"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dxpjCF StyledRadioButton-g1f6ld-5 faNYKv"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 ivWYmc"
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 fszNWu StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bDuVfd"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButton Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 iyWydp sc-eEFsat jGBTLB"
  >
    <div
      class="sc-gyMicV ksuWwf sc-gkmwsU kLffam"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-g1f6ld-0 eJtYIq"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 dxpjCF StyledRadioButton-g1f6ld-5 faNYKv"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-g1f6ld-1 fmxEro"
            disabled=""
            name="radio button"
            type="radio"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 fszNWu StyledRadioButton__StyledRadioButtonBox-g1f6ld-4 bDuVfd"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-g1f6ld-2"
        >
          Radio button
        </span>
      </label>
    </div>
  </div>
</div>
`;
